System RC1 : - new layout for /system - access in menu - per forum whitelist - general fixes

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -155,6 +155,8 @@
   "admin-whitelists-form.button.delete": "Delete",
   "admin-whitelists-form.button.submit": "Save",
   "admin-whitelists-form.message.onsuccess": "Whitelist successfully saved",
+  "admin-whitelists-form.title.create": "New whitelist",
+  "admin-whitelists-form.title.edit": "Edit whitelist",
   "admin-whitelists-form.value.placeholder": "Comma separated emails or just one email",
   "admin-whitelists.list.add-whitelist": "Add",
   "admin-whitelists.list.search.placeholder": "Search a whitelist...",
@@ -220,6 +222,11 @@
   "common.sorts.random": "shuffle",
   "common.sorts.recently-updated": "recently updated",
   "common.sorts.score": "Relevance",
+  "common.sorts.label": "tri",
+  "common.sorts.filter": "filter",
+  "common.sorts.filters": "filters",
+  "common.user": "participant",
+  "common.users": "participants",
   "cookie.allow": "Allow cookies",
   "cookie.decline": "Decline",
   "cookie.message": "This website uses cookies to ensure you get the best experience on our website.",
@@ -432,6 +439,7 @@
   "signup.your-firstname": "Your firstname",
   "signup.your-lastname": "Your lastname",
   "system.sidebar.forums": "Forums",
+  "system.sidebar.others": "Others",
   "system.sidebar.users": "Users",
   "system.title": "Global settings",
   "system.user-badges": "Stickers",
@@ -439,6 +447,7 @@
   "system.users.message.onsuccess": "User saved successfully",
   "system.users.title.create": "Add user",
   "system.users.title.edit": "Edit user",
+  "system.users.search.placeholder": "Search users...",
   "topics.actions.cause.do": "Add my Support",
   "topics.actions.cause.done": "You Support this",
   "topics.actions.poll.do": "Vote",
@@ -489,5 +498,15 @@
   "validators.min-length.singular": "It must be at least 1 character",
   "validators.not.match": "No match",
   "validators.password.not.match": "Passwords do not match",
-  "validators.required": "Required"
+  "validators.required": "Required",
+  "forum.visibility.closed.description": "Anyone can see the content. You choose who can participate.",
+  "forum.visibility.closed.title": "Restricted",
+  "forum.visibility.collaborative.description": "Anyone can see and create content and also will be able to participate.",
+  "forum.visibility.collaborative.title": "Collaborative",
+  "forum.visibility.confirm": "Are you sure you want to make this forum '{visibility}'?",
+  "forum.visibility.private.description": "You choose who can see this forum.",
+  "forum.visibility.private.title": "Secret",
+  "forum.visibility.public.description": "Anyone can see the content and will be able to participate.",
+  "forum.visibility.public.title": "Open for All",
+  "forum.visibility.title": "Visibility"
 }
