--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -151,8 +151,10 @@
   "admin-whitelists-form.button.delete": "Supprimer",
   "admin-whitelists-form.button.submit": "Sauvegarder",
   "admin-whitelists-form.message.onsuccess": "Règle enregistrée avec succès",
+  "admin-whitelists-form.title.create": "Nouvelle règle",
+  "admin-whitelists-form.title.edit": "Modifier la règle",
   "admin-whitelists-form.value.placeholder": "Une seule adresse ou plusieurs adresses email séparées par une virgule",
-  "admin-whitelists.list.add-whitelist": "Aujouter",
+  "admin-whitelists.list.add-whitelist": "Ajouter",
   "admin-whitelists.list.search.placeholder": "Rechercher un utilisateur ...",
   "comment-card.flagged-as-spam": "Ce commentaire a été signalé comme contenu indésirable",
   "comment-card.not-spam": "Annuler signalement",
@@ -201,6 +203,7 @@
   "common.close": "Ferme",
   "common.closed": "Fermé",
   "common.edit": "Modifier",
+  "common.filter": "filtrer",
   "common.internal-error": "Une erreur s'est produite",
   "common.more-information": "Plus d'information",
   "common.no-user-for-email": "Cette adresse email n'est pas enregistrée",
@@ -216,6 +219,11 @@
   "common.sorts.random": "aléatoire",
   "common.sorts.recently-updated": "mis à jour récemment",
   "common.sorts.score": "score",
+  "common.sorts.label": "tri",
+  "common.sorts.filter": "filtrer",
+  "common.sorts.filters": "filtres",
+  "common.user": "participant",
+  "common.users": "participants",
   "cookie.allow": "Autoriser les cookies",
   "cookie.decline": "Refuser",
   "cookie.message": "Ce site utilise des cookies pour l'authentification et une expérience de navigation optimale.",
@@ -408,7 +416,7 @@
   "signup.check-email": "Merci d'ouvrir l'email que nous vous avons envoyé (n'oubliez-pas de regarder aussi dans les emails indésirables) et de cliquer sur le lien fourni.",
   "signup.complete": "Inscription terminée",
   "signup.email": "Email",
-  "signup.email-exist": "Cette adresse email est déjà utlisée",
+  "signup.email-exist": "Cette adresse email est déjà utilisée",
   "signup.email-sent": "Email envoyé",
   "signup.email-validated": "Votre adresse email a été validée et vous êtes maintenant connecté",
   "signup.firstname": "Prénom",
@@ -430,6 +438,7 @@
   "signup.your-firstname": "Votre prénom",
   "signup.your-lastname": "Votre nom",
   "system.sidebar.forums": "Consultations",
+  "system.sidebar.others": "Autres",
   "system.sidebar.users": "Utilisateurs",
   "system.title": "Paramêtres globaux",
   "system.user-badges": "Badges",
@@ -437,6 +446,7 @@
   "system.users.message.onsuccess": "Utilisateur sauvegardé avec succès",
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
+  "system.users.search.placeholder": "Rechercher un utilisateur ...",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
@@ -488,5 +498,15 @@
   "validators.min-length.singular": "1 caractère au minimum",
   "validators.not.match": "Aucun résultat",
   "validators.password.not.match": "Les mots de passe ne correspondent pas",
-  "validators.required": "Requis"
+  "validators.required": "Requis",
+  "forum.visibility.closed.description": "N'importe qui peut voir le contenu. Vous choisissez qui peut participer.",
+  "forum.visibility.closed.title": "Restreint",
+  "forum.visibility.collaborative.description": "Toute personne peut voir et créer du contenu et pourra également participer.",
+  "forum.visibility.collaborative.title": "Collaboratif",
+  "forum.visibility.confirm": "Êtes-vous sûr de vouloir rendre ce forum '{visibility}'?",
+  "forum.visibility.private.description": "Vous choisissez qui peut voir ce forum.",
+  "forum.visibility.private.title": "Privé",
+  "forum.visibility.public.description": "Toute personne peut voir le contenu de ce forum et pourra participer.",
+  "forum.visibility.public.title": "Ouvert à tous",
+  "forum.visibility.title": "Visibilité"
 }
