- Add extra user fields to comment.csv export - Comment direct link

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -206,6 +206,7 @@
   "common.cancel": "Cancel",
   "common.close": "Closes",
   "common.closed": "Closed",
+  "common.copy.link": "Copy link",
   "common.edit": "Edit",
   "common.internal-error": "There was an error.",
   "common.more-information": "More information",
