--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -202,6 +202,7 @@
   "common.cancel": "Annuler",
   "common.close": "Ferme",
   "common.closed": "Fermé",
+  "common.copy.link": "Copier le lien",
   "common.edit": "Modifier",
   "common.internal-error": "Une erreur s'est produite",
   "common.more-information": "Plus d'information",
