Revert "comment `read more` link"
This reverts commit 05fd862e057b518c9b2eac30c92189ffea430089.

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -207,8 +207,7 @@
   "common.ok": "Ok",
   "common.or": "ou",
   "common.pass-match-error": "Ne correspondent pas.",
-  "common.read-more": "Lire plus",
-  "common.read-less": "Lire moins",
+  "common.read-more": "Lire la suite",
   "common.sorts.by-title-asc": "titre de A -> Z",
   "common.sorts.closing-soon": "clôture proche",
   "common.sorts.newest-first": "plus récents d'abord",
